--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "markeight-fruitemojis",
+  "name": "fruits-emoji-interpreter",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
